--- a/find-your-market/src/styles/Markets.css
+++ b/find-your-market/src/styles/Markets.css
@@ -1,23 +1,29 @@
 @import 'variables.css'; 
+
+body{
+  background-color: #e7f5eb;
+  color: #534757;
+}
+
 .markets-container {
   padding: 20px;
   border-radius: 8px; 
-  margin-top: 80px;
+  margin-top: 60px;
 }
 
 .markets-header {
   display: flex;
   justify-content: center; 
   align-items: center;
-  margin-bottom: 30px;
+
 }
 
 .markets-title {
-  font-size: 2.2rem;
+  margin-top: 8px;
+  padding-left: 5px;
+  font-size: 60px;
   font-weight: bold;
-  color: #333;
-  letter-spacing: 0.5px;
-  text-align: center; 
+  text-align: left; 
   margin: 0; 
   flex-grow: 1; 
 }
@@ -36,7 +42,6 @@
 .search-button:hover {
   background-color: transparent;
 }
-
 
 .markets-list {
   display: flex;
@@ -58,12 +63,13 @@
 }
 
 .button-container {
+  color: #e7f5eb;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 15px;
-  background-color:var(--lightgreen);
-  border: 4px solid var(--darkgreen);
+  background-color: #3c415c;
+  border: 4px solid #7280c0;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
   width: 100%;
@@ -95,14 +101,18 @@
 }
 
 .markets-name {
-  font-size: 1.3rem; 
-  font-weight: bold;
-  color: #333;
+  font-size: 45px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden; 
 }
 
+.map-title{
+  font-size: 50px;
+  text-align: left;
+  margin-top: 15px;
+  padding-left: 5px;
+}
 
 .arrow-container {
   display: flex;
@@ -121,7 +131,6 @@
 
 
 .markets-map {
-  margin-top: 40px;
   border-radius: 8px;
   overflow: hidden;
 }
