--- a/find-your-market/src/styles/Stall.css
+++ b/find-your-market/src/styles/Stall.css
@@ -1,54 +1,72 @@
 @import 'variables.css';
+body{
+  background-color: #e7f5eb;
+  color: #534757;
+  font-family: "Dongle", sans-serif; 
+}
+
 .container-stall {
+    margin-top: 50px;
     padding: 20px;
-    font-family: Arial, sans-serif;
     text-align: center;
   }
   
   .title-stall {
-    font-size: 36px;
-    margin-bottom: 10px;
-    margin-top: 70px;
+    margin-top: 8px;
+    padding-left: 5px;
+    font-size: 60px;
+    font-weight: bold;
+    text-align: left; 
+    margin: 0;
   }
   
   .sub-heading-stall {
-    font-size: 24px;
+    margin-top: -8px;
+    padding-left: 5px;
+    font-size: 30px;
     margin-bottom: 20px;
-    color: gray;
     text-align: left;
+  }
+
+  p.sub-heading-stall{
+    margin-top: -15px;
+    margin-bottom: 10px;
+    font-size: 25px;
   }
   
   .scroll-container-stall {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 80vh;
+    max-height: 55vh;
     overflow-y: auto; 
-    border: 1px solid #ccc;
     padding: 10px;
     border-radius: 8px;
-    width: 80%; 
+    width: 100%; 
     margin: 0 auto; 
   }
   
   .item-stall {
-    font-size: 18px;
+    font-size: 35px;
     margin: 10px 0;
-    padding: 10px;
+    padding: 5px;
     background-color:var(--lightgreen);
     border: 4px solid var(--darkgreen);
     border-radius: 4px;
     width: 100%; 
+    padding-left: 15px;
+    padding-right: 15px;
     text-align: left;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .item-name-stall {
     font-weight: bold;
   }
   
+  .item-name-stall {
+    
+  }
+  
   .item-amount-stall {
-    color: gray;
+    color: rgb(192, 80, 100);
   }
