--- a/find-your-market/src/styles/AppSettings.css
+++ b/find-your-market/src/styles/AppSettings.css
@@ -1,7 +1,6 @@
 @import 'variables.css';
 
 .settings-container {
-  font-family: Arial, sans-serif;
   padding: 30px 20px;
   max-width: 800px;
   margin: 0 auto;
@@ -10,19 +9,18 @@
 }
 
 .settings-heading {
-  text-align: center;
-  font-size: 46px;
+  text-align: left;
+  padding-left: 5px;
+  font-size: 60px;
   font-weight: bold;
-  color: #333;
-  margin-bottom: 20px;
-  padding-top: 35px;
+  margin-bottom: 10px;
+  padding-top: 20px;
 }
 
 .settings-section-heading {
-  font-size: 26px;
-  margin-bottom: 10px;
-  color: #444;
-  font-weight: 600;
+  font-size: 45px;
+  margin-bottom: 0px;
+  font-weight: bold;
 }
 
 .settings-section {
@@ -38,11 +36,9 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  margin-top: 15px;
 }
 
 .settings-button {
-  padding: 10px 18px;
   background-color:var(--purple);
   color: #fff;
   border: none;
@@ -51,7 +47,8 @@
   font-weight: bold;
   transition: background-color 0.3s ease;
   width: 100%;  
-  margin-top: 20px;
+  margin-top: 2px;
+  font-size: 25px;
 }
 
 .settings-button:hover {
@@ -74,10 +71,10 @@
 
 .settings-link {
   text-decoration: none;
-  color: var(--mustard);
-  font-weight: 600;
+  color: var(--purple);
+  font-weight: 500;
   transition: color 0.3s ease;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .settings-link:hover {
@@ -88,8 +85,7 @@
 .settings-section button {
   padding: 8px 15px;
   background-color: var(--mustard);
-  border: 1px solid var(--mustard);
-  color: #333;
+  border: 2px solid #7d620b;
   border-radius: 4px;
   font-size: 20px;
   cursor: pointer;
@@ -105,20 +101,19 @@
 }
 
 .permission-text{
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .permission-data-text{
-  font-size: 24px;
+  font-size: 30px;
   padding-top: 25px;
 }
 
 .radio-group-settings label {
-  font-size: 24px;
-  color: #555;
+  font-size: 30px;
   display: flex;
   align-items: center;
-  gap: 8px;
+  padding-right: 50px;
 }
 
 .radio-group-settings input[type="radio"] {
