--- a/find-your-market/src/styles/AccountDetails.css
+++ b/find-your-market/src/styles/AccountDetails.css
@@ -1,5 +1,11 @@
 @import 'variables.css';
 
+body{
+  background-color: #e7f5eb;
+  color: #534757;
+  font-family: "Dongle", sans-serif; 
+}
+
 .container-account-details {
   max-width: 900px;
   margin: auto;
@@ -17,16 +23,18 @@
 }
 
 .headerText {
-  font-size: 40px;
-  text-align: center; 
+  padding-top: 5px;
+  font-size: 50px;
+  text-align: left; 
   flex-grow: 1; 
   font-weight: bold; 
 }
 .logoutButton {
   display: flex;
   align-items: center;
-  background-color: var(--purple); 
+  background-color: var(--mustard); 
   color: white;
+  font-weight: bold;
   border: none;
   padding: 8px 16px;
   border-radius: 4px;
@@ -48,7 +56,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 16px;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .detailGroup label {
@@ -58,8 +66,9 @@
 }
 
 .detailGroup p {
-  margin: px 0;
+  padding-left: 8px;
   flex: 2;
+  padding-top: 5px;
 }
 
 .input,
@@ -69,20 +78,19 @@ select {
   padding: 8px;
   font-size: 20px;
   margin-top: 4px;
-  border: 1px solid #ddd;
+  border: 1px solid #e7f5eb;
   border-radius: 4px;
   flex: 2;
+  margin-right: 10px;
 }
 
 .editIcon {
   color: var(--purple);
   cursor: pointer;
-  margin-left: 8px;
 }
 
 .editIcon:hover {
- color:#bdafee ;
-  
+  color:#bdafee ; 
 }
 
 .actions {
@@ -93,7 +101,7 @@ select {
 .profileSection {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: -5px;
 }
 
 .profilePhotoWrapper {
@@ -101,8 +109,8 @@ select {
 }
 
 .profilePhoto {
-  width: 150px; 
-  height: 150px; 
+  width: 100px; 
+  height: 100px; 
   border-radius: 50%; 
   object-fit: cover; 
   border: 2px solid #ccc;
@@ -144,8 +152,8 @@ select {
 }
 
 .stalls-header .section-box-title {
-  margin: 0;
-  font-size: 1.5rem;
+  font-size: 40px;
+  margin-bottom: -10px;
 }
 
 .stalls-header .addIcon {
