--- a/find-your-market/src/styles/CreateAccount.css
+++ b/find-your-market/src/styles/CreateAccount.css
@@ -1,5 +1,10 @@
 @import 'variables.css';
 
+body{
+  color: #534757;
+  font-family: "Dongle", sans-serif; 
+}
+
 .create-account-container {
   display: flex;
   flex-direction: column;
@@ -21,10 +26,7 @@
   margin-top: 30px;
 }
 
-h2 {
-  /* color: #333; */
-  margin-bottom: 20px;
-}
+
 
 .input-group {
   margin-bottom: 15px;
@@ -35,6 +37,7 @@ h2 {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+  margin-bottom: -5px;
 }
 
 .input-group.name-group .input-group {
@@ -42,17 +45,18 @@ h2 {
 }
 
 .input-group label {
-  font-size: 14px;
-  color: #666;
+  font-size: 35px;
   display: block;
+  margin-bottom: -8px;
 }
 
 .input-group input {
+  font-family: "Dongle", sans-serif;
   width: 100%;
   padding: 10px;
   margin-top: 5px;
-  font-size: 16px;
-  border: 1px solid #ddd;
+  font-size: 30px;
+  border: 1px solid #979797;
   border-radius: 4px;
 }
 
@@ -61,27 +65,27 @@ h2 {
 }
 
 .create-account-btn {
+  font-family: "Dongle", sans-serif;
   width: 100%;
-  padding: 12px;
+  padding: 10px;
+  margin-top: 10px;
   background-color: #2a411c;
   color: white;
   border: none;
-  font-size: 16px;
+  font-size: 30px;
   border-radius: 4px;
   cursor: pointer;
   margin-bottom: 15px;
 }
 
 .password-links {
-  font-size: 14px;
-  color: #666;
+  font-size: 25px;
   text-align: right;
   padding-top: 5px;
 }
 
 .login-links {
-  font-size: 14px;
-  color: #666;
+  font-size: 30px;
 }
 
 .create-account-btn:hover {
@@ -107,15 +111,14 @@ h2 {
 .radio-group {
     display: flex;
     gap: 10px; 
-    margin-top: 5px;
+    margin-top: 0px;
   }
   
   .radio-group label {
-    font-size: 14px;
-    color: #666;
+    font-size: 30px;
     display: flex;
-    align-items: center;
-    gap: 5px;
+    align-items: last baseline;
+    gap: 10px;
   }
   
 .input-group select {
@@ -138,8 +141,8 @@ h2 {
     padding: 10px;
     margin-top: 10px;
     background-color: var(--lightgreen); 
-   margin-bottom: 40px;
-   border-radius: 25px;
+    margin-bottom: 40px;
+    border-radius: 25px;
   }
   
   .new-stall-form h3 {
@@ -148,7 +151,7 @@ h2 {
   }
 
   .new-stall-form-save-btn{
-   margin-right: 5px;
+    margin-right: 5px;
     width: 30%;
     padding: 12px;
     background-color: var(--darkgreen);
@@ -168,14 +171,8 @@ h2 {
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 50px;
+    margin-bottom: -10px;
   }
 
-  .input-group input {
-    font-size: 14px;
-  }
-
-  .create-account-btn {
-    font-size: 14px;
-  }
 }
