--- a/find-your-market/src/styles/AccountDetails.css
+++ b/find-your-market/src/styles/AccountDetails.css
@@ -30,16 +30,16 @@ body{
   font-weight: bold; 
 }
 .logoutButton {
+  font-family: "Dongle", sans-serif;
   display: flex;
   align-items: center;
   background-color: var(--mustard); 
   color: white;
-  font-weight: bold;
   border: none;
   padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 25px;
 }
 
 .logoutButton:hover {
@@ -74,9 +74,10 @@ body{
 .input,
 .textarea,
 select {
+  font-family: "Dongle", sans-serif;
   width: 100%;
   padding: 8px;
-  font-size: 20px;
+  font-size: 30px;
   margin-top: 4px;
   border: 1px solid #e7f5eb;
   border-radius: 4px;
