--- a/find-your-market/src/styles/AppSettings.css
+++ b/find-your-market/src/styles/AppSettings.css
@@ -39,16 +39,16 @@
 }
 
 .settings-button {
+  font-family: "Dongle", sans-serif;
   background-color:var(--purple);
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-weight: bold;
   transition: background-color 0.3s ease;
   width: 100%;  
   margin-top: 2px;
-  font-size: 25px;
+  font-size: 35px;
 }
 
 .settings-button:hover {
@@ -87,7 +87,7 @@
   background-color: var(--mustard);
   border: 2px solid #7d620b;
   border-radius: 4px;
-  font-size: 20px;
+  font-size: 30px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
