--- a/find-your-market/src/styles/Popup.css
+++ b/find-your-market/src/styles/Popup.css
@@ -32,7 +32,8 @@
 }
 
 .popup-content h2 {
-  font-size: 1.8rem;
+  color: #534757;
+  font-size: 2.5rem;
   font-weight: 600;
   margin-bottom: 12px;
   text-transform: capitalize;
@@ -40,8 +41,9 @@
 }
 
 .popup-content p {
-  font-size: 1.1rem;
-  margin-bottom: 25px;
+  color: #534757;
+  font-size: 2rem;
+  margin-bottom: 15px;
   line-height: 1.5;
 }
 
@@ -50,12 +52,12 @@
   top: 8px;  
   right: 8px;  
   background-color: transparent;
-  border: 2px solid white; 
+  border: 2px solid rgba(238, 58, 58, 0); 
   border-radius: 50%; 
-  width: 20px;  
-  height: 20px; 
-  font-size: 14px;  
-  color: white;
+  width: 40px;  
+  height: 40px; 
+  font-size: 30px;  
+  color: rgb(238, 58, 58);
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -73,16 +75,18 @@
 }
 
 .popup-button {
+  font-family: "Dongle", sans-serif; 
   padding: 10px 20px;
   background-color: var(--mustard);
   color: white;  
   border: none; 
   border-radius: 5px;  
-  font-size: 16px;  
+  font-size: 30px;  
   cursor: pointer;  
   transition: background-color 0.3s ease, transform 0.2s ease;
   margin-top: 15px;  
   width: 100%; 
+  margin-bottom: 10px;
 }
 
 .popup-button.error {
