--- a/find-your-market/src/styles/AppSettings.css
+++ b/find-your-market/src/styles/AppSettings.css
@@ -93,7 +93,7 @@
 }
 
 .settings-section button:hover {
-  background-color: #f8db7b;
+  background-color: #bcb2de;
 }
 
 .settings-section button:active {
