--- a/find-your-market/src/styles/CreateAccount.css
+++ b/find-your-market/src/styles/CreateAccount.css
@@ -84,6 +84,24 @@ body{
   padding-top: 5px;
 }
 
+.password-label-container {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+
+.password-requirements-btn {
+  padding: 5px 10px;
+  background-color: var(--darkgreen);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
 .login-links {
   font-size: 30px;
 }
@@ -130,10 +148,16 @@ body{
     border-radius: 4px;
   }
 
+  .location-pref-dropdown, .visit-time-dropdown, .stall-name-dropdown {
+    font-size: 30px;
+  }
+
+
   .add-stall-link {
     color: var(--darkgreen);
     text-decoration: underline;
     cursor: pointer;
+    font-size: 30px;
   }
   
   .new-stall-form {
@@ -146,18 +170,20 @@ body{
   }
   
   .new-stall-form h3 {
-    margin-bottom: 10px; 
     padding: 10px; 
+    font-size: 35px;
+    font-weight: bold;
   }
 
   .new-stall-form-save-btn{
+    font-family: "Dongle", sans-serif;
+    margin-top: 10px;
     margin-right: 5px;
-    width: 30%;
     padding: 12px;
     background-color: var(--darkgreen);
     color: white;
     border: 2px solid #2a411c;
-    font-size: 12px;
+    font-size: 30px;
     border-radius: 4px;
     cursor: pointer;
     margin-bottom: 15px;
