--- a/find-your-market/src/styles/StaffStallForm.css
+++ b/find-your-market/src/styles/StaffStallForm.css
@@ -1,3 +1,8 @@
+body{
+  background-color: #e7f5eb;
+  color: #534757;
+  font-family: "Dongle", sans-serif; 
+}
 .popup-overlay {
     position: fixed;
     top: 0;
@@ -9,51 +14,52 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-  }
+}
   
-  .popup-content {
-    background: #e7f5eb;
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 400px;
-    width: 95%;
-  }
+.popup-content {
+  background: #e7f5eb;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 400px;
+  width: 95%;
+}
   
-  .add-stall-form .input-group {
-    margin-bottom: 15px;
-  }
+.add-stall-form .input-group {
+  margin-bottom: 15px;
+}
   
-  .add-stall-form .input-group label {
-    display: block;
-    margin-bottom: 5px;
-    color: black;
-  }
+.add-stall-form .input-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #534757;
+}
   
-  .add-stall-form .input-group input,
-  .add-stall-form .input-group textarea {
+.add-stall-form .input-group input, .add-stall-form .input-group textarea {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
+}
   
-  .submit-btn, .close-btn {
-    margin-top: 10px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-  }
+.submit-btn, .close-btn {
+  margin-top: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+}
   
-  .submit-btn {
-    background-color: #28a745;
-    color: black;
-  }
+.submit-btn {
+  font-size: 30px;
+  font-family: "Dongle", sans-serif; 
+  background-color: #28a745;
+}
   
-  .close-btn {
-    background-color: #dc3545;
-    color: black;
-    margin-left: 10px;
-  }
+.close-btn {
+  font-size: 30px;
+  font-family: "Dongle", sans-serif; 
+  background-color: #dc3545;
+  margin-left: 10px;
+}
   
 .items-list {
   max-height: 200px; 
@@ -65,9 +71,10 @@
 }
 
 .add-item-btn {
+  margin-left: 119px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-top: 10px;
-}
-
-.item-label{
-  color: #000;
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
