--- a/find-your-market/src/styles/Home.css
+++ b/find-your-market/src/styles/Home.css
@@ -85,16 +85,19 @@ body{
 
 .chart-explain-btn {
     position: absolute; /* Allow precise positioning */
-    right: 10px; /* Adjust distance from the right edge */
-    top: 13%; /* Center vertically */
+    right: 1px; /* Adjust distance from the right edge */
+    top: 12%; /* Center vertically */
     transform: translateY(-50%); /* Adjust for exact vertical centering */
-    padding: 5px 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 15px;
+    padding-right: 15px;
     background-color: #534757;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 30px;
 }
 
 .stall-container {
